Major bug squashing, enhancements to how labels are displayed. Still a lot to do on both fronts, but leagues better than it was

--- a/frontend/src/labelPreview/labelPreview.css
+++ b/frontend/src/labelPreview/labelPreview.css
@@ -1,4 +1,6 @@
 .labelContainer {
+    display: flex;
+    flex-direction: column;
     border: solid black 1px;
     border-radius: 10px;
     color: black;
@@ -11,9 +13,14 @@
     background-color: white;
     margin-left: 15px;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .lsLabelContainer {
+    display: flex;
+    flex-direction: column;
     border: solid black 1px;
     border-radius: 10px;
     color: black;
@@ -26,6 +33,9 @@
     background-color: white;
     margin-left: 15px;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
 .borderless {
@@ -33,43 +43,24 @@
     margin: 0 10px;
 }
 
-.border {
-    cursor: pointer;
-}
-
 .nameContainer {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    position: relative;
-    font-size: 0.1rem;
-    margin: 0.3rem 0 0.2rem;
-    padding: 0;
-    width: 100%;
-}
-
-.display {
+    font-size: clamp(0.5rem, 1rem, 1rem);
+    line-height: 1.1rem;
+    width: 95%;
     margin: 0;
 }
 
-.address {
-    left: 20%;
-    width: 60%;
-    top: 61%;
-    position: absolute;
+.location {
+    text-align: center;
     font-size: 0.8rem;
-    margin: 0;
+    line-height: 0.8rem;
+    margin: 0.4rem 0 0;
 }
 
-.number {
-    left: 20%;
-    width: 60%;
-    top: 87.5%;
-    position: absolute;
+.phone {
+    text-align: center;
     font-size: 0.8rem;
+    line-height: 0.8rem;
     margin: 0;
 }
 
@@ -95,5 +86,14 @@
     position: relative;
     font-size: 0.85rem;
     word-wrap: break-word;
-    margin: 0 0.5rem;
+    margin: 0.4rem 0 0;
+    line-height: 0.9rem;
+}
+
+.none {
+    display: none;
+}
+
+.pointer {
+    cursor: pointer;
 }
